# Trekira

./: Makefile  README.md  load.py  main.py  pyproject.toml  test.py  unitree_0_ar.pt  unitree_0_sa.pt  unitree_1_ar.pt  unitree_1_sa.pt  unitree_2_ar.pt  unitree_2_sa.pt  unitree_3_ar.pt  unitree_3_sa.pt  unitree_4_ar.pt  unitree_4_sa.pt  unitree_5_ar.pt  unitree_5_sa.pt  unitree_6_ar.pt  unitree_6_sa.pt  unitree_7_ar.pt  unitree_7_sa.pt  unitree_8_ar.pt  unitree_8_sa.pt  unitree_9_ar.pt  unitree_9_sa.pt
trekira/model/: action_reward.py  state_action.py
trekira/reward/: simple.py
trekira/sim/: __init__.py  model_info.py  quadruped.py  sim.py
