[tool.poetry]
name = "trekira"
version = "0.1.0"
description = ""
authors = ["Krishna Shah <kshahusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybullet = "^3.2.6"
numpy = "^2.0.0"
torch = "^2.3.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
